--- a/src/main/resources/templates/catalogs/itemCategoryAdd.html
+++ b/src/main/resources/templates/catalogs/itemCategoryAdd.html
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" type="text/css" href="../../../webapp/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>
 		
 	<script src="../../webapp/js/jquery.js" th:src="@{/js/jquery.js}"></script>
-<!-- 	<script src="../../webapp/js/jquery-form.js" th:src="@{/js/jquery-form.js}"></script> -->
 	<script src="../../webapp/js/ajaxMethods.js" th:src="@{/js/ajaxMethods.js}"></script>
 	<script src="../../webapp/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
    
@@ -18,8 +17,7 @@
  	<h3 th:text="#{itemcategory.lbl.title}">Item categories!!</h3>
  	<p th:text="#{itemcategory.lbl.caption}">ADD Item categories description!!</p>
  	
- 	<form th:action="@{/catalogs/categories/}+(${edit}?'edit':'add')" method="post" class="form-horizontal" th:object="${category}"
- 	onforminput="enableIfChange()">
+ 	<form th:action="@{/catalogs/categories/}+(${edit}?'edit':'add')" method="post" class="form-horizontal" th:object="${category}">
  	  
  	  <div th:if="${edit}" class="form-group" th:name="id" th:errorclass="'form-group has-error'">
 		<div class="col-sm-6">
@@ -28,9 +26,10 @@
 	  </div>
 
  	  <div class="form-group" th:name="description" th:errorclass="'form-group has-error'">
-		<label for="description" th:text="#{itemCategory.lbl.desc}" class="col-sm-1 control-label"></label>
+		<label for="description" th:text="#{itemcategory.lbl.desc}" class="col-sm-1 control-label"></label>
 		<div class="col-sm-6">
-			<input id="description"  th:field="*{description}" type="text" required="required" autofocus="autofocus" class="form-control"/>
+			<input id="description"  th:field="*{description}" type="text" required="required" class="form-control"
+			autocomplete="off" autofocus="autofocus"/>
 			<ul th:if="${#fields.hasErrors('description')}" class="help-block">
 	 			<li th:each="err : ${#fields.errors('description')}" th:text="${err}"/>
 	 		</ul>
@@ -38,7 +37,7 @@
 	  </div>
 
  	  <div th:if="${edit}" class="form-group" th:name="status" th:errorclass="'form-group has-error'">
-		<label for="status" th:text="#{itemCategory.lbl.status}" class="col-sm-1 control-label">status!!</label>
+		<label for="status" th:text="#{itemcategory.lbl.status}" class="col-sm-1 control-label">status!!</label>
 		<div class="col-sm-6">
 			<select id="status"  th:field="*{status}" class="form-control">
 				<option th:each="type : ${categoryTypes}" th:value="${type}"
