--- a/src/main/resources/templates/other/about.html
+++ b/src/main/resources/templates/other/about.html
@@ -3,27 +3,28 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>LiberAlbus - Login</title>
 	
 	<!--[if lt IE 9]>
 	          <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	        <![endif]-->
-	
-	<!-- Our CSS stylesheet file -->
-	<link rel="stylesheet" type="text/css" href="../../webapp/css/menu.css" th:href="@{/css/menu.css}"/>
-	<link rel="stylesheet" type="text/css" href="../../webapp/css/main.css" th:href="@{/css/main.css}"/>
-		
-	<script src="../../webapp/js/jquery.js" th:src="@{/js/jquery.js}"></script>
-	<script src="../../webapp/js/jquery-form.js" th:src="@{/js/jquery-form.js}"></script>
-	<script src="../../webapp/js/ajaxMethods.js" th:src="@{/js/ajaxMethods.js}"></script>
-
 </head>
 <body>
-	<ul>
-		<li>jquery.com</li>
-		<li>http://getbootstrap.com/</li>
-		<li>gliphicons.com</li>
-	</ul>
+	<div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal">&times;</button>
+      <h4 class="modal-title" th:text="#{menu.about}">about his app!!</h4>
+    </div>
+    <div class="modal-body">
+		<ul>
+			<li>jquery.com</li>
+			<li>http://getbootstrap.com/</li>
+			<li>gliphicons.com</li>
+		</ul>
+    </div>
+    <div class="modal-footer">
+    	<button type="button" class="btn btn-default" data-dismiss="modal" th:text="#{btn.close}">Close!!</button>
+<!-- 		<button type="button" class="btn btn-primary">Save changes</button> -->
+	</div>
+
 </body>
 </html>
 
