--- a/src/main/resources/templates/other/about.html
+++ b/src/main/resources/templates/other/about.html
@@ -14,9 +14,11 @@
       <h4 class="modal-title" th:text="#{menu.about}">about his app!!</h4>
     </div>
     <div class="modal-body">
+    <h1>Invent Manager</h1>
+    <h3>Powered by</h3>
 		<ul>
 			<li>jquery.com</li>
-			<li>http://getbootstrap.com/</li>
+			<li>getbootstrap.com/</li>
 			<li>gliphicons.com</li>
 		</ul>
     </div>
