first paged query

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-	<h1 th:text="#{msg.error.server}">SERVER ERROR!!</h1>
+	<h1 th:text="#{msg.error.server.title}">SERVER ERROR!!</h1>
 	<h3 th:text="#{msg.error.server.note}">Content cannot be displayed, reason:!!</h3>
 	
 	<ul>
