--- a/src/main/resources/templates/tester.html
+++ b/src/main/resources/templates/tester.html
@@ -30,7 +30,7 @@
 	
 	$(this).ready(function(){
 		
-		$('#main').load('./general/groups.html');
+		$('#main').load('./general/itemCategory.html');
 	});
 	</script>
 </head>
