--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,12 +1,12 @@
 @CHARSET "UTF-8";
 
-table{
-	border-left-width: 3px;
-}
+/* table{ */
+/* 	border-left-width: 3px; */
+/* } */
 
-td{
-	background: #F6F6F9;
-}
+/* td{ */
+/* 	background: #F6F6F9; */
+/* } */
 
 #main{
 	display: block;
@@ -15,7 +15,7 @@ td{
 	width: 96%;
 	box-shadow: 5px 5px 5px #000;
 	padding: 5px;
-	position: relative;
+/* 	position: relative; */
 	min-height: 300px;
 }
 
@@ -23,14 +23,6 @@ td{
 	text-align: center;
 }
 
-#main table{
-	background: white;
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
-	max-height: 800px;
-	max-width: 300px;
-}
 
 #loadBox{
 	position:absolute;
