--- a/src/main/resources/templates/frags/common.html
+++ b/src/main/resources/templates/frags/common.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head></head>
 <body>
+	<!-- *************	APPLICATION'S MENU ********** -->
 	<nav class="navbar navbar-default" th:fragment="menu">
 	  	<div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
@@ -12,11 +13,9 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	
 	      <a href="#" th:href="@{/}" class="navbar-brand"
 	        	th:text="#{menu.home}">!!</a>   
 	    </div>
-
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
@@ -47,7 +46,7 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
 
-
+<!-- *************	PAGINATION BAR : ONLY BUTTONS ********** -->
 	<ul class="pagination pagination-sm" th:fragment="pagingBar(page,pageSize)">
 		<li th:class="${page.firstPage}?'previous disabled' : 'previous '">
    			<a th:unless="${itemCategories.firstPage}" th:href="@{categories(page=0,size=${pageSize})}">First!!</a>
@@ -64,8 +63,8 @@
    		</li>
 	</ul>
 
-
-	<ul th:fragment="breadcrumbsCatagories" class="breadcrumb"
+	<!-- *************	BREADCRUMBS FOR CATEGORIES ********** -->
+	<ul th:fragment="breadcrumbsCategories" class="breadcrumb"
 	th:with="link0='/catalogs'
 	,link1='/catalogs/categories'
 	,link2='/catalogs/categories/add'
