--- a/src/main/resources/templates/catalogs/customerTypeAdd.html
+++ b/src/main/resources/templates/catalogs/customerTypeAdd.html
@@ -12,12 +12,12 @@
 </head>
 <body class="container-fluid">
 	<div th:replace="frags/common :: menu"></div>
-	<div th:replace="frags/common :: (${edit}? brCrumbCatCategEdit : brCrumbCatCategNew)"></div>
+	<div th:replace="frags/common :: (${edit}? brCrumbCatCustTypeEdit : brCrumbCatCustTypeNew)"></div>
 		
- 	<h2 th:text="#{itemcategory.lbl.title}">Item categories!!</h2>
- 	<p th:text="#{itemcategory.lbl.caption}">ADD Item categories description!!</p>
+ 	<h2 th:text="#{customertype.lbl.title}">Customer Types!!</h2>
+ 	<p th:text="#{customertype.lbl.caption}">ADD Customer Types description!!</p>
  	
- 	<form th:action="@{/catalogs/categories/}+(${edit}?'edit':'add')" method="post" class="form-horizontal" th:object="${category}">
+ 	<form th:action="@{/catalogs/custTypes/}+(${edit}?'edit':'add')" method="post" class="form-horizontal" th:object="${customerType}">
  	  
  	  <div th:if="${edit}" class="form-group" th:name="id" th:errorclass="'form-group has-error'">
 		<div class="col-sm-6">
@@ -26,25 +26,12 @@
 	  </div>
 
  	  <div class="form-group" th:name="description" th:errorclass="'form-group has-error'">
-		<label for="description" th:text="#{itemcategory.lbl.desc}" class="col-sm-1 control-label"></label>
+		<label for="description" th:text="#{customertype.lbl.desc}" class="col-sm-1 control-label"></label>
 		<div class="col-sm-6">
 			<input id="description"  th:field="*{description}" type="text" required="required" class="form-control"
 			autocomplete="off" autofocus="autofocus"/>
 			<ul th:if="${#fields.hasErrors('description')}" class="help-block">
 	 			<li th:each="err : ${#fields.errors('description')}" th:text="${err}"/>
-	 		</ul>
-		</div>
-	  </div>
-
- 	  <div th:if="${edit}" class="form-group" th:name="status" th:errorclass="'form-group has-error'">
-		<label for="status" th:text="#{itemcategory.lbl.status}" class="col-sm-1 control-label">status!!</label>
-		<div class="col-sm-6">
-			<select id="status"  th:field="*{status}" class="form-control">
-				<option th:each="type : ${categoryTypes}" th:value="${type}"
-					th:text="#{${'lbl.status.' + type}}">REGISTERED!!</option>
-			</select>
-			<ul th:if="${#fields.hasErrors('status')}" class="help-block">
-	 			<li th:each="err : ${#fields.errors('status')}" th:text="${err}"/>
 	 		</ul>
 		</div>
 	  </div>
